# llm-leaderboard

./: .dockerignore  .env  .env.example  .gitignore  .gitigonre  .gitmodules  Dockerfile  Dockerfile.vllm  EVALUATE_GUIDE.md  Makefile  README.md  README_API_TYPES.md  README_APPROACH2.md  debug_arrow_data.py  debug_detailed.py  debug_swebench.py  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.yaml  docker-entrypoint-vllm.sh  docker-entrypoint.sh  env  env.example  evaluate.sh  evaluate_simple.sh  generate_docker_override.sh  gold-test.manual_gold.json  gold.test-gold.json  gpt-4-0613.gpt4_trial.json  gpt-4.1-2025-04-14.nejumi_1749359874.json  gpt-4.1-2025-04-14.nejumi_1749363063.json  gpt-4.1-2025-04-14.nejumi_1749365814.json  gpt-4.1-2025-04-14.nejumi_1749375974.json  gpt-4.1-2025-04-14.nejumi_1749377127.json  gpt-4.1-2025-04-14.nejumi_1749383673.json  gpt-4.1-2025-04-14.nejumi_1749385915.json  gpt-4.1-2025-04-14.nejumi_1749395974.json  gpt-4.1-2025-04-14.nejumi_1749396936.json  gpt-4.1-2025-04-14.nejumi_1749397337.json  gpt-4.1-2025-04-14.nejumi_1749398003.json  (+34 more)
blend_run_configs/: README.md  blend_config_temp.yaml  config.yaml  config_template.yaml
config_not_in_use/: config-Athene-V2-Agent.yaml  config-Athene-V2-Chat.yaml  config-ELYZA-Llama-3-ELYZA-JP-8B.yaml  config-Llama-3-Swallow-8B-Instruct-v0_1.yaml  config-Llama-3.1-8B-Instruct.yaml  config-Llama-3_1-Swallow-8B-Instruct-v0_5.yaml  config-Meta-Llama-3-8B-Instruct.yaml  config-Ministral-8B-Instruct-2410.yaml  config-Mixtral-8x7B-Instruct-v0-1.yaml  config-Phi-4-mini-instruct.yaml  config-Qwen1-5-72B-Chat.yaml  config-Qwen2-1-5B-Instruct.yaml  config-Qwen2_5-72B-Instruct.yaml  config-Qwen3-14B_reasoning.yaml  config-StableBeluga-7B.yaml  config-Swallow-70b-instruct-v0_1.yaml  config-Swallow-7b-instruct-v0.1.yaml  config-Swallow-7b-instruct-v0_1.yaml  config-Yi-1.5-34B-Chat.yaml  config-amazon-nova-micro-v1:0.yaml  config-anthropic-claude-3-7-sonnet-20250219-v1:0.yaml  config-anthropic-claude-3-sonnet-20240229-v1:0.yaml  config-calm3-22b-chat.yaml  config-chatgpt-4o-latest.yaml  config-command-r-plus-v1:0.yaml  config-cyberagent-calm2-7b-chat-dpo-experimental.yaml  config-cyberagent-calm2-7b-chat.yaml  config-example-openai-compatible.yaml  config-example-vllm-docker.yaml  config-gemma-3-12b-it.yaml  config-google-gemini-1-5-pro.yaml  config-google-gemini-1.5-pro-exp-0801.yaml  config-gpt-4-0613.yaml  config-gpt-4-1106-preview.yaml  config-gpt-4-turbo-2024-04-09.yaml  config-gpt-4o-2024-05-13.yaml  config-gpt-4o-mini-2024-07-18.yaml  config-karakuri-ai-karakuri-lm-8x7b-chat-v0-1.yaml  config-llm-jp-13b-instruct-full-dolly-ichikara_004_001_single-oasst-oasst2-v2-0.yaml  config-meta-llama-4-scout.yaml  (+9 more)
configs/: Meta-Llama-3-8B-Instruct.yaml  base_config.yaml  command-r-plus-v1:0.yaml  config-Athene-V2-Agent.yaml  config-Athene-V2-Chat.yaml  config-CohereForAI-c4ai-command-r-08-2024.yaml  config-DeepSeek-V3-0324.yaml  config-ELYZA-Llama-3-ELYZA-JP-8B.yaml  config-ELYZA-japanese-Llama-2-13b-instruct.yaml  config-EvoLLM-JP-A-v1-7B.yaml  config-EvoLLM-JP-v1-7B.yaml  config-Llama-3-Swallow-70B-Instruct-v0_1.yaml  config-Llama-3-Swallow-8B-Instruct-v0_1.yaml  config-Llama-3.1-Swallow-70B-Instruct-v0.1.yaml  config-Llama-3.1-Swallow-8B-Instruct-v0.1.yaml  config-Llama-3.1-Swallow-8B-Instruct-v0.2.yaml  config-Llama-3.2-11B-Vision-Instruct.yaml  config-Llama-3.2-90B-Vision-Instruct.yaml  config-Llama-3_1-Swallow-8B-Instruct-v0_2.yaml  config-Meta-Llama-3-1-405B-Instruct-FP8.yaml  config-Meta-Llama-3-1-405B-Instruct.yaml  config-Meta-Llama-3-1-70B-Instruct.yaml  config-Meta-Llama-3-1-8B-Instruct.yaml  config-Meta-Llama-3-2-1B-Instruct.yaml  config-Meta-Llama-3-70B-Instruct.yaml  config-Meta-Llama-3-8B-Instruct-offline.yaml  config-Meta-Llama-3-8B-Instruct.yaml  config-Meta-Llama-3_3-70B-Instruct.yaml  config-Mistral-7B-Instruct-v0-2.yaml  config-Mistral-Large-Instruct-2411.yaml  config-Mixtral-8x7B-Instruct-v0-1.yaml  config-Phi-3-medium-128k-instruct.yaml  config-Phi-3-mini-128k-instruct.yaml  config-Phi-4-mini-instruct.yaml  config-Qwen1-5-72B-Chat.yaml  config-Qwen2-1-5B-Instruct.yaml  config-Qwen2-72B-Instruct.yaml  config-Qwen2-7B-Instruct.yaml  config-Qwen2_5-32B-Instruct (1).yaml  config-Qwen2_5-72B-Instruct.yaml  (+197 more)
docs/: README_arc_agi.md  README_arc_agi_ja.md  README_hle.md  (+6 more)
scripts/analysis/: INSTRUCTION.md  Nejumi4_result_20280826.csv  README.md  analyze_overall_ja_oss.py  compare_swallow_llama.py  pyproject.toml
(+450 files in other folders)
