[project]
name = "nejumi4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "absl-py==1.4.0",
    "accelerate>=1.7.0",
    "anthropic>=0.54.0", # より新しいバージョンに統一
    "azure-identity>=1.23.0",
    "backoff>=2.2.1",
    "bitsandbytes==0.45.1",
    "boto3>=1.38.36", # 重複だが上位互換で統一
    "botocore>=1.38.36",
    "cohere>=5.15.0", # より新しい方に統一
    "datamodel-code-generator==0.25.7",
    "datasets",
    "fuzzywuzzy>=0.18.0",
    "google-cloud-aiplatform==1.93.1",
    "google-generativeai>=0.8.5",
    "hf-transfer==0.1.9",
    "huggingface_hub",
    "immutabledict==4.2.1",
    "ja-sentence-segmenter==0.0.2",
    "janome==0.5.0",
    "langchain>=0.3.25",
    "langdetect==1.0.9",
    "mistralai>=1.8.2",  # より新しい方に統一
    "mpmath==1.3.0",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "openai>=1.86.0", # より新しい方に統一
    "overrides",
    "pandas>=2.3.0",
    "pathlib",
    "pydantic>=2.8.2",
    "pydantic_settings>=2.2.1",
    "pylint>=3.0.0",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.27.1",
    "questionary>=2.1.0",
    "qwen-agent",
    "requests",
    "rhoknp>=1.7.1",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "shortuuid>=1.0.13",
    "spacy==3.7.5",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2", # 9.0.0 → 9.1.2 に統一（より新しい）
    "toolz>=1.0.0",
    "tree_sitter==0.21.3",
    "tree-sitter-java==0.21.0",
    "tree-sitter-javascript==0.21.4",
    "tqdm>=4.67.1",
    "typer>=0.12.5",
    "unbabel-comet>=2.2.6",
    "vllm>=0.9.1",
    "wandb>=0.20.1",
    "writer-sdk>=2.1.0",
    "matplotlib>=3.10.3",
]
