[project]
name = "nejumi-leaderboard-analysis"
version = "0.1.0"
description = "Analysis script for Nejumi Leaderboard 4 results"
authors = [
    {name = "Analysis Team", email = "analysis@example.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "numpy>=1.24.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
